front-back-app.yml
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
      - name: back-end-container
        image: efrei/back-end:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8090

# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  selector:
    app: back-end
  ports:
    - name: http
      port: 80
      targetPort: 8090
  type: ClusterIP

# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end-container
        image: efrei/front-end:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8092

# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  selector:
    app: front-end
  ports:
    - name: http
      port: 80
      targetPort: 8092
  type: NodePort

# Ingress Configuration (optional)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: front-end.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 80
